Support non-ASCII characters (Latin-1)

--- a/templates/source-listing.tex
+++ b/templates/source-listing.tex
@@ -2,6 +2,9 @@
 \usepackage{listings}
 \usepackage{color}
 
+\usepackage[latin1]{inputenc}
+\usepackage[T1]{fontenc}
+
 \definecolor{javared}{rgb}{0.6,0,0} % for strings
 \definecolor{javagreen}{rgb}{0.25,0.5,0.35} % comments
 \definecolor{javapurple}{rgb}{0.5,0,0.35} % keywords
