Fix LaTeX injection. Thanks, @anoek

--- a/templates/source-listing.tex
+++ b/templates/source-listing.tex
@@ -27,6 +27,7 @@ stringstyle=\color{javagreen},
 commentstyle=\bfseries\color{javared},
 morecomment=[s][\color{javadocblue}]{/**}{*/},
 tabsize=2,
+escapeinside={\%}{)},
 showspaces=false,
 showstringspaces=false}
 
