--- a/templates/source-listing.tex
+++ b/templates/source-listing.tex
@@ -21,7 +21,7 @@ string=[b]'%
 }
 
 \lstset{
-basicstyle=\ttfamily\footnotesize,
+basicstyle=\ttfamily\large,
 keywordstyle=\color{javadocblue}\bfseries,
 stringstyle=\color{javagreen},
 commentstyle=\bfseries\color{javared},
